# src/main/kotlin/fi/metatavu/muisti/persistence/model/Exhibition.kt
@@ -1,0 +1,54 @@
+package fi.metatavu.muisti.persistence.model
+
+import org.hibernate.annotations.Cache
+import org.hibernate.annotations.CacheConcurrencyStrategy
+import java.time.OffsetDateTime
+import java.util.*
+import javax.persistence.*
+import javax.validation.constraints.NotEmpty
+import javax.validation.constraints.NotNull
+
+/**
+ * JPA entity representing exhibition
+ *
+ * @author Antti Leppä
+ */
+@Entity
+@Cacheable(true)
+@Cache(usage = CacheConcurrencyStrategy.TRANSACTIONAL)
+open class Exhibition {
+
+    @Id
+    var id: UUID? = null
+
+    var name: @NotNull @NotEmpty String? = null
+
+    @Column(nullable = false)
+    var createdAt: OffsetDateTime? = null
+
+    @Column(nullable = false)
+    var modifiedAt: OffsetDateTime? = null
+
+    @Column(nullable = false)
+    var creatorId: UUID? = null
+
+    @Column(nullable = false)
+    var lastModifierId: UUID? = null
+
+    /**
+     * JPA pre-persist event handler
+     */
+    @PrePersist
+    fun onCreate() {
+        createdAt = OffsetDateTime.now()
+        modifiedAt = OffsetDateTime.now()
+    }
+
+    /**
+     * JPA pre-update event handler
+     */
+    @PreUpdate
+    fun onUpdate() {
+        modifiedAt = OffsetDateTime.now()
+    }
+}
